--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <h1>Select the system you would like to commission.</h1>
         
             <p>
-              *This test will be saved and submitted to the company server immediately upon completion. 
+              *This document will be saved and submitted to the company server immediately upon completion. 
             </p>
           </div>
         </div>
