--- a/austcotest.html
+++ b/austcotest.html
@@ -13,8 +13,13 @@
  <!--Forms-->
  <form action="process.php" method="POST">
     <div>
-        <label>Hospital Name</label>
-        <input type="text" name="hospitalName">
+        <label>Hospital</label>
+        <select name="hospital">
+            <option value="Miami, FL-EH">Miami, FL-EH</option>
+            <option value="Stuart, FL-EH">Stuart, FL-EH</option>
+            <option value="Tallahassee, FL-EH">Tallahassee, FL-EH</option>
+            <option value="Midland, TX-EH">Midland, TX-EH</option>
+        </select>
     </div>
     <br>
     <hr>
