--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="navbar">
         <div class="container">
-          <div class="logo">Sterling Commissioning Portal</div>
+          <div class="logo">Sterling Communication Technologies - Commissioning Portal</div>
           <ul class="nav">
             <li>
               <a href="austcotest.html">Austco</a>
